--- a/controller_learning/config/dagger_settings_self.yaml
+++ b/controller_learning/config/dagger_settings_self.yaml
@@ -4,8 +4,10 @@ verbose: True
 seq_len: 1 # History Lenght. When increasing to more than one, the model becomes machine dependent due to data saving latency.
 checkpoint:
   # Put to true and add a path for loading a ckpt
-  resume_training: True
-  resume_file: "results/loop/20240624-000258/train/ckpt-65"
+  # resume_training: True
+  # resume_file: "results/loop/20240624-000258/train/ckpt-65"
+  resume_training: False
+  resume_file: ""
 data_generation:
   max_rollouts: 150
   train_every_n_rollouts: 30
