--- a/controller_learning/config/train_settings_self.yaml
+++ b/controller_learning/config/train_settings_self.yaml
@@ -1,14 +1,16 @@
 log_dir: 'results/train_fma_cork_seq_1_fts_tracks_newcam_new_end'
 quad_name: 'hummingbird'
-seq_len: 1 # History Lenght. When increasing to more than one, the model becomes machine dependent due to data saving latency.
+seq_len: 8 # History Lenght. When increasing to more than one, the model becomes machine dependent due to data saving latency.
 checkpoint:
   # Put to true and add a path for loading a ckpt
-  resume_training: False
-  resume_file: ""
+  # resume_training: False
+  # resume_file: ""
+  resume_training: True
+  resume_file: "results/train_fma_cork_seq_1_fts_tracks_newcam_new_end/20240731-081203/train/ckpt-36"
 train:
   max_training_epochs: 200
   max_allowed_error: 0.7
-  batch_size: 8
+  batch_size: 32
   summary_freq: 400
   min_number_fts: 40
   train_dir: "data/loop/train"
