--- a/controller_learning/config/train_settings_self.yaml
+++ b/controller_learning/config/train_settings_self.yaml
@@ -1,14 +1,14 @@
 log_dir: 'results/train_fma_cork_seq_1_fts_tracks_newcam_new_end'
 quad_name: 'hummingbird'
-seq_len: 5 # History Lenght. When increasing to more than one, the model becomes machine dependent due to data saving latency.
+seq_len: 3 # History Lenght. When increasing to more than one, the model becomes machine dependent due to data saving latency.
 checkpoint:
   # Put to true and add a path for loading a ckpt
-  # resume_training: False
-  # resume_file: ""
+  resume_training: False
+  resume_file: ""
   # resume_training: True
   # resume_file: "results/train_fma_cork_seq_1_fts_tracks_newcam_new_end/20240818-214045/train/ckpt-232"
-  resume_training: True
-  resume_file: "results/train_fma_cork_seq_1_fts_tracks_newcam_new_end/20240824-003149/train/ckpt-100"
+  # resume_training: True
+  # resume_file: "results/train_fma_cork_seq_1_fts_tracks_newcam_new_end/20240826-004233/train/ckpt-144"
 train:
   max_training_epochs: 200
   max_allowed_error: 0.7
